workspace/operators/v2/decision/stress_test.md
---
id: stress_test
name: 极端情景压力测试
category: decision
tags: [decision, risk, stress]
data_needed: [income, cashflow, dividend, balancesheet]
outputs:
  - field: revenue_after_3y_decline
    type: float
    desc: 三年连续衰退10%后的净利润(亿元)
  - field: still_profitable
    type: bool
    desc: 压力下是否仍盈利
  - field: dividend_sustainable_under_stress
    type: bool
    desc: 极端情景下分红是否可持续
  - field: stress_test_result
    type: str
    desc: "通过/勉强通过/不通过"
---

## 极端情景压力测试框架

设定"连续三年每年衰退10%"的极端悲观情景，通过三项安全测试验证标的在最恶劣情况下的生存能力和投资安全性。

### 一、极端悲观情景设定

根据公司历史营收波动率选择对应压力等级：

### 压力情景分档

根据公司历史营收波动率选择对应压力等级：

| 类型 | 判定标准 | 年营收下降幅度 | 典型行业 |
|------|---------|--------------|---------|
| 稳定型 | 近5年营收波动率 < 5% | -5%/年 | 公用事业、必选消费、医疗服务 |
| 一般型 | 波动率 5-15% | -10%/年 | 制造业、可选消费、科技 |
| 周期型 | 波动率 > 15% | -20%/年 | 资源品、航运、化工、房地产 |

> 营收波动率 = 近5年营收同比增速的标准差
> 若历史数据不足5年，使用可获取的最长历史

**默认值**：若无法计算波动率，使用一般型（-10%/年）

```
情景假设（以一般型-10%为例）：

假设条件：
├── Year 0（当前）：净利润 = P 亿元
├── Year 1：净利润 = P x 0.90
├── Year 2：净利润 = P x 0.81
├── Year 3：净利润 = P x 0.729
└── 三年累计利润 = P x (0.90 + 0.81 + 0.729) = P x 2.439

稳定型（-5%）：三年累计利润 = P x (0.95 + 0.9025 + 0.857) = P x 2.710
周期型（-20%）：三年累计利润 = P x (0.80 + 0.64 + 0.512) = P x 1.952

同步假设：
├── 经营现金流同步按对应比例下降
├── 资本支出维持不变（保守假设）
├── 股息政策不变（测试可持续性）
└── 不考虑任何一次性收益
```

### 二、三项安全测试

#### 测试1：利润覆盖测试

**核心问题**：即使连续三年衰退，累计利润能否覆盖扣除现金后的市值？

```
计算公式：
三年累计利润 = 当前净利润 x 2.439

判定标准：
三年累计利润 > 剔除净现金后市值（EV）

其中：
EV = 市值 - 净现金
净现金 = 现金及等价物 - 有息负债
```

| 结果 | 判定 | 含义 |
|------|------|------|
| 三年累计利润 > EV | 通过 | 即使连续衰退，3年利润即可收回投资 |
| 三年累计利润 < EV 但 > EV x 0.7 | 边缘 | 安全边际不足，需谨慎 |
| 三年累计利润 < EV x 0.7 | 不通过 | 极端情景下投资回收期过长 |

#### 测试2：现金覆盖测试

**核心问题**：账上现金加三年经营现金流，能否覆盖市值？

```
计算公式：
当前现金存量 = 现金及等价物（T0资产）
三年累计经营现金流 = 当前经营现金流 x 2.439（同比例衰退）
三年累计FCF = 三年累计经营现金流 - 3年维持性CAPEX

判定标准：
当前现金存量 + 三年累计FCF > 市值
```

| 结果 | 判定 | 含义 |
|------|------|------|
| 现金 + 三年FCF > 市值 | 通过 | 现金安全垫极厚 |
| 现金 + 三年FCF > 市值 x 0.8 | 边缘 | 基本安全，需监控 |
| 现金 + 三年FCF < 市值 x 0.8 | 不通过 | 现金保护不足 |

#### 测试3：分红可持续性测试

**核心问题**：即使利润连续衰退三年，当前分红水平能否维持？

```
计算公式：
Year 3 净利润 = 当前净利润 x 0.729
Year 3 派息支出 = 当前年度股息总额（假设不变）
Year 3 分红支付率 = Year 3 派息支出 / Year 3 净利润
Year 3 FCF覆盖率 = Year 3 FCF / Year 3 派息支出
```

| 指标 | 安全阈值 | 危险阈值 |
|------|---------|---------|
| Year 3 分红支付率（股息/净利润） | < 70% | > 100% |
| Year 3 FCF覆盖率（FCF/股息） | > 1.5倍 | < 1.0倍 |
| Year 3 股息率（基于当前股价） | > 3% | < 2% |

### 三、综合判定

| 通过测试数 | 综合评级 | 操作建议 |
|-----------|---------|---------|
| 3项全部通过 | 极度安全 | 可重仓（核心标的15%） |
| 2项通过 | 基本安全 | 可正常建仓（卫星标的8%） |
| 1项通过 | 安全边际不足 | 仅限观察仓位（2%以下） |
| 0项通过 | 不安全 | 不建仓，排除 |

### 四、压力测试输出格式

```
### 极端情景压力测试报告

标的：[名称] [代码]
测试日期：[YYYY-MM-DD]
当前市值：[X]亿元
净现金：[Y]亿元
剔除净现金市值(EV)：[X-Y]亿元

【情景设定】连续三年净利润每年下降10%

| 年份 | 净利润(亿元) | 经营现金流(亿元) | FCF(亿元) | 股息支出(亿元) |
|------|-------------|-----------------|----------|--------------|
| Year 0（当前） | [P] | [OCF] | [FCF] | [DIV] |
| Year 1（-10%） | [P*0.9] | [OCF*0.9] | [FCF1] | [DIV] |
| Year 2（-19%） | [P*0.81] | [OCF*0.81] | [FCF2] | [DIV] |
| Year 3（-27%） | [P*0.729] | [OCF*0.729] | [FCF3] | [DIV] |
| 三年累计 | [合计] | [合计] | [合计] | [合计] |

【测试1：利润覆盖】
三年累计利润 [X]亿 vs 剔除净现金市值 [Y]亿
结果：[通过/不通过]

【测试2：现金覆盖】
现金存量[A]亿 + 三年累计FCF[B]亿 = [A+B]亿 vs 市值[C]亿
结果：[通过/不通过]

【测试3：分红可持续性】
Year 3 分红支付率：[X]%（阈值<70%）
Year 3 FCF覆盖率：[X]倍（阈值>1.5倍）
结果：[通过/不通过]

【综合判定】
通过测试数：[N]/3
评级：[极度安全/基本安全/安全边际不足/不安全]
建议仓位：[核心15%/卫星8%/观察2%/排除]
```

### 五、补充测试：债务安全

在压力情景下检查：
- 利息覆盖倍数（EBIT/利息支出）是否降至1.5x以下 → 潜在债务违约风险
- 有息负债/EBITDA 是否超过4x → 债务结构恶化

### 六、补充情景（可选）

当标的处于周期行业时，可追加以下补充情景测试：

| 补充情景 | 假设 | 核心验证 |
|---------|------|---------|
| 行业产能过剩 | 产品价格降至历史10%分位 | FCF是否仍为正 |
| 需求断崖 | 收入下降30%（一次性冲击） | 现金储备能否撑过低谷 |
| 汇率冲击 | 本币贬值20% | 外币负债是否导致资不抵债 |
| 政策冲击 | 核心业务受限（税率/牌照） | 替代收入能否覆盖运营成本 |

对于周期股，需同时通过基准情景（三年-10%）和至少一项补充情景，方可视为安全。
